Add existing file

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,4 +13,19 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>`
+
+
+    <footer>
+        <p>
+            Charlie Weitzenberg - n17v856<br>
+            <br>
+            My role in the assignement will be to retrieve the volunteer assignments and also basic styling for the assignments page.<br>
+		<br>
+                client/app.css: Styling volunteer assignment page<br>
+                server/index.js: Retrieving volunteer assignements<br>
+		<br>
+            Github: <a href="https://github.com/cweitzenberg/BSF_Project">https://github.com/cweitzenberg/BSF_Project</a>
+        </p>
+    </footer>
+
 </html>
